[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/planet_list_screen/planet_list_item.gd" type="Script" id=1]

[node name="PlanetListItem" type="Control"]
anchor_right = 1.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
mouse_filter = 1
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PlanetNameLabel" type="Label" parent="HBoxContainer"]
margin_right = 238.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Name"
valign = 1
clip_text = true

[node name="LevelLabel" type="Label" parent="HBoxContainer"]
margin_left = 242.0
margin_right = 306.0
margin_bottom = 32.0
rect_min_size = Vector2( 64, 0 )
size_flags_vertical = 7
text = "Level"
valign = 1
clip_text = true

[node name="TravelButton" type="Button" parent="HBoxContainer"]
margin_left = 310.0
margin_right = 360.0
margin_bottom = 32.0
size_flags_vertical = 3
text = "Travel"

[connection signal="pressed" from="HBoxContainer/TravelButton" to="." method="_on_TravelButton_pressed"]
